 Explicitly enable bus masterling in case BIOS, UEFI or firmware don't enable it. Might fix PR kern/53811.